Add Tic-Tac-Toe JavaFX example for UE09
Small live-coding example covering the JavaFX building blocks needed for
the Snake home exercise: BorderPane + GridPane layout, MVC separation,
property binding, FXML-defined status bar with a controller, and CSS
styling. Includes a README with run instructions for VS Code, IntelliJ
and Eclipse.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>